<resources>
    <string name="app_name">Datos de Contacto</string>
    <string name="hint1">Nombre Completo</string>
    <string name="hint2">Telefono</string>
    <string name="hint3">Email</string>
    <string name="descripcion">Descripción Contacto</string>
    <string name="confirmar_datos">Confirmar Datos</string>
    <string name="boton_siguiente">Siguiente</string>
    <string name="boton_fecha">Aceptar</string>
    <string name="boton_editar">Editar Datos</string>
    <string name="pnombre">nombre</string>
    <string name="ptelefono">telefono</string>
    <string name="pemail">email</string>
    <string name="pfecha">fecha</string>
    <string name="pdescripcion">descripcion</string>
    <string name="dato_telefono">Telefono: </string>
    <string name="dato_email">E-mail: </string>
    <string name="dato_descripcion">Descripción: </string>
</resources>
