<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pablo.activities.ConfirmarDatos">

    <TextView
        android:id="@+id/tvConfirmar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmar_datos"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/titulo" />

    <TextView
        android:id="@+id/tvMNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_below="@id/tvConfirmar"
        android:layout_marginTop="@dimen/top2"
        android:textSize="@dimen/text"/>

    <TextView
        android:id="@+id/tvMFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pfecha"
        android:layout_below="@id/tvMNombre"
        android:textSize="@dimen/text"/>

    <TextView
        android:id="@+id/tvMTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ptelefono"
        android:layout_below="@id/tvMFecha"
        android:textSize="@dimen/text"/>

    <TextView
        android:id="@+id/tvMEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pemail"
        android:layout_below="@id/tvMTelefono"
        android:textSize="@dimen/text"/>

    <TextView
        android:id="@+id/tvMDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pdescripcion"
        android:layout_below="@id/tvMEmail"
        android:textSize="@dimen/text"/>

    <Button
        android:id="@+id/btnEditarDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_editar"
        android:layout_below="@+id/tvMDescripcion"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/top2"
        android:textAllCaps="false"
        android:onClick="volver"/>

</RelativeLayout>
