<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.pablo.activities.MainActivity">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint1"
            android:singleLine="true"/>

    <TableLayout
        android:id="@+id/rlDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tiNombre"
        android:layout_centerHorizontal="true">

        <DatePicker
            android:id="@+id/dpFecha"
            android:layout_width="match_parent"
            android:layout_height="@dimen/date_picker"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"/>

            <Button
                android:id="@+id/btnFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boton_fecha"
                android:onClick="fecha"/>

    </TableLayout>

       <android.support.design.widget.TextInputEditText
        android:id="@+id/tiTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint2"
        android:inputType="phone"
        android:layout_below="@id/rlDate"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/tiEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint3"
        android:inputType="textEmailAddress"
        android:layout_below="@id/tiTelefono"/>

    <TextView
        android:id="@+id/tvDescrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tiEmail"
        android:text="@string/descripcion"
        android:textSize="@dimen/text"
        android:layout_marginTop="@dimen/top"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/tiDescrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvDescrip"/>

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_siguiente"
        android:layout_alignParentBottom="true"
        android:onClick="datos"/>
</RelativeLayout>
